--- a/MyExcercise/AsyncExampleWPF/Main.xaml
+++ b/MyExcercise/AsyncExampleWPF/Main.xaml
@@ -9,6 +9,8 @@
     <Grid>
         <Button Content="同步" HorizontalAlignment="Left" Margin="140,170,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Content="异步" HorizontalAlignment="Left" Margin="425,170,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="No Await" HorizontalAlignment="Left" Margin="270,285,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <Button Content="Await" HorizontalAlignment="Left" Margin="440,285,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
 
     </Grid>
 </Window>
