--- a/MyExcercise/wpf1/MultiAsyncCommandView.xaml
+++ b/MyExcercise/wpf1/MultiAsyncCommandView.xaml
@@ -8,7 +8,7 @@
         Title="MultiAsyncCommandView" Height="450" Width="800">
     <Grid>
         <Button ToolTip="多试几次，任务的完成次序不一样" Name="startButton" Content="Button" HorizontalAlignment="Left" Margin="115,115,0,0" VerticalAlignment="Top" Width="75" Click="startButton_Click"/>
-        <TextBox Name="resultsTextBox" HorizontalAlignment="Left" Height="165" Margin="130,215,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="520"/>
+        <TextBox Name="resultsTextBox" HorizontalAlignment="Left" Height="165" Margin="130,215,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="520"/>
 
     </Grid>
 </Window>
