--- a/MyExcercise/AsyncExampleWPF/Main.xaml
+++ b/MyExcercise/AsyncExampleWPF/Main.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AsyncExampleWPF"
         mc:Ignorable="d"
-        Title="Main" Height="450" Width="800">
+        Title="Main" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button Content="同步" HorizontalAlignment="Left" Margin="140,170,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Content="异步" HorizontalAlignment="Left" Margin="425,170,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
