--- a/MyExcercise/wpf1/ReturnValueView.xaml
+++ b/MyExcercise/wpf1/ReturnValueView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf1"
         mc:Ignorable="d"
-        Title="ReturnValueView" Height="450" Width="800">
+        Title="ReturnValueView" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button Content="Task_TResult" HorizontalAlignment="Left" Margin="45,115,0,0" VerticalAlignment="Top" Width="110" Click="Button_Click"/>
         <TextBox x:Name="txtbox" HorizontalAlignment="Left" Height="145" Margin="85,190,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="585"/>
