--- a/MyExcercise/WpfApp2/MainWindow.xaml
+++ b/MyExcercise/WpfApp2/MainWindow.xaml
@@ -8,8 +8,7 @@
         Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button Content="多线程同步资源" HorizontalAlignment="Left" Margin="95,95,0,0" VerticalAlignment="Top" Width="125" Click="Button_Click"/>
-        <Button Content="Mutex (bool initiallyOwned);" HorizontalAlignment="Left" Margin="255,136,0,0" VerticalAlignment="Top" Width="235" RenderTransformOrigin="0.533,0.526"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="510,55,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="1.267,0"/>
+        <Button Content="Mutex (bool initiallyOwned);" HorizontalAlignment="Left" Margin="255,136,0,0" VerticalAlignment="Top" Width="235" RenderTransformOrigin="0.533,0.526" Click="Button_Click_2"/>
         <TextBox HorizontalAlignment="Left" Height="170" Margin="95,200,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="555"/>
 
     </Grid>
